# 3d_viewer

./: Makefile  README.md  manual.texi  s21_viewer_3d.c  s21_viewer_3d.h  s21_viewer_test.c
CPP_FILES/: CMakeCache.txt  CMakeLists.txt  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  s21_viewer_3d.c  s21_viewer_3d.h  viewer.cpp  viewer.h
new_version/: 3DViewer.c  3DViewer.h
new_version/CPP_FILES/: CMakeLists.txt  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  s21_viewer_3d.c  s21_viewer_3d.h  viewer.cpp  viewer.h
to_do_later_better/: README.md
